LATTICE-1621 use helper function